--- a/FoodApp/app/src/main/res/values/strings.xml
+++ b/FoodApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
 <resources>
-    <string name="app_name">FoodApp</string>
+    <string name="app_name" translatable="false">FoodApp</string>
+    <string name="price">Price</string>
+    <string name="weight">Weight</string>
+    <string name="descr">Description</string>
+    <string name="no_descr">No description</string>
+    <string name="no_internet">Check your internet connection</string>
+    <string name="open_menu">Open</string>
+    <string name="close_menu">Close</string>
+    <string name="wait">Please wait</string>
+    <string name="loading">Downloading data...</string>
+    <string name="error_save_db">Error during saving in Database</string>
+    <string name="call">Call us</string>
+    <string name="find">We are here</string>
+    <string name="adress" translatable="false">Остров слёз, Минск</string>
+    <string name="error_downloading">Error during downloading data. Try again later</string>
+    <string name="error_loading_map">Error during loading map</string>
+    <string name="by" translatable="false">By Vitali Bovkunovich</string>
+
+    <array name="menu_items">
+        <item name="category">Category</item>
+        <item name="contacts">About</item>
+    </array>
+
 </resources>
